--- a/app/src/main/res/layout/activity_student_list.xml
+++ b/app/src/main/res/layout/activity_student_list.xml
@@ -1,143 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.student.cooper_assign2.StudentListActivity"
-    tools:layout_editor_absoluteY="81dp"
-    tools:layout_editor_absoluteX="0dp">
+    tools:context="com.example.student.cooper_assign2.StudentListActivity">
 
     <EditText
         android:id="@+id/txtFirstName"
-        android:layout_width="wrap_content"
+        android:layout_width="220sp"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
         android:ems="10"
         android:hint="@string/txtFirstName"
         android:inputType="textPersonName"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1"
-        app:layout_constraintHorizontal_bias="0.502" />
+        android:layout_gravity="center"/>
 
     <EditText
         android:id="@+id/txtLastName"
-        android:layout_width="wrap_content"
+        android:layout_width="220sp"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/txtLastName"
         android:inputType="textPersonName"
-        app:layout_constraintLeft_toLeftOf="@+id/txtFirstName"
-        app:layout_constraintRight_toRightOf="@+id/txtFirstName"
-        app:layout_constraintTop_toBottomOf="@+id/txtFirstName"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        android:layout_gravity="center"/>
 
     <EditText
         android:id="@+id/txtYear"
-        android:layout_width="214dp"
-        android:layout_height="0dp"
+        android:layout_width="220sp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
         android:ems="10"
         android:hint="@string/txtYear"
         android:inputType="text"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtAge"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        android:layout_gravity="center"/>
 
     <EditText
         android:id="@+id/txtAge"
-        android:layout_width="0dp"
-        android:layout_height="46dp"
+        android:layout_width="220sp"
+        android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/txtAge"
         android:inputType="number"
-        app:layout_constraintLeft_toLeftOf="@+id/txtLastName"
-        app:layout_constraintRight_toRightOf="@+id/txtLastName"
-        app:layout_constraintTop_toBottomOf="@+id/txtLastName"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
-
-    <Button
-        android:id="@+id/btnRemoveStudent"
-        android:layout_width="104dp"
-        android:layout_height="53dp"
-        android:text="@string/txtRemoveStudent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1"
-        app:layout_constraintVertical_bias="0.572" />
-
-    <Button
-        android:id="@+id/btnRemoveAll"
-        android:layout_width="104dp"
-        android:layout_height="53dp"
-        android:onClick="removeAllStudents"
-        android:text="@string/txtRemoveAll"
-        app:layout_constraintBaseline_toBaselineOf="@+id/btnRemoveStudent"
-        app:layout_constraintLeft_toRightOf="@+id/btnRemoveStudent"
-        tools:layout_constraintBaseline_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginLeft="0dp" />
-
-    <Button
-        android:id="@+id/btnAddStudent"
-        android:layout_width="104dp"
-        android:layout_height="53dp"
-        android:onClick="addStudent"
-        android:text="@string/txtAddStudent"
-        app:layout_constraintBaseline_toBaselineOf="@+id/btnRemoveStudent"
-        app:layout_constraintRight_toLeftOf="@+id/btnRemoveStudent"
-        tools:layout_constraintBaseline_creator="1"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginRight="0dp" />
+        android:layout_gravity="center"/>
 
     <Spinner
         android:id="@+id/spinTeacherList"
         android:layout_width="325dp"
         android:layout_height="40sp"
+        android:layout_marginTop="10sp"
+        android:layout_gravity="center"
         android:layout_marginBottom="29dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:background="@android:color/background_light"
-        app:layout_constraintBottom_toTopOf="@+id/btnRemoveStudent"
-        app:layout_constraintHorizontal_bias="0.511"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
+        android:background="@android:color/background_light" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="60sp">
+        <Button
+            android:id="@+id/btnAddStudent"
+            android:layout_width="60sp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".33"
+            android:onClick="addStudent"
+            android:text="@string/txtAddStudent" />
+
+        <Button
+            android:id="@+id/btnRemoveStudent"
+            android:layout_width="60sp"
+            android:onClick="removeCheckedStudents"
+            android:layout_height="wrap_content"
+            android:layout_weight=".33"
+            android:text="@string/txtRemoveStudent" />
+
+        <Button
+            android:id="@+id/btnRemoveAll"
+            android:layout_width="60sp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".33"
+            android:onClick="removeAllStudents"
+            android:text="@string/txtRemoveAll" />
+
+
+    </LinearLayout>
+
+
 
     <ListView
         android:id="@+id/lstStudentsView"
         android:layout_width="377dp"
         android:layout_height="196dp"
-        android:layout_marginBottom="-49dp"
+        android:layout_marginBottom="0dp"
         android:layout_marginEnd="2dp"
         android:layout_marginLeft="2dp"
         android:layout_marginRight="2dp"
-        android:layout_marginStart="2dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_editor_absoluteY="315dp" />
-</android.support.constraint.ConstraintLayout>
+        android:layout_marginStart="2dp" />
+</LinearLayout>
