--- a/app/src/main/res/layout/activity_teacher_list.xml
+++ b/app/src/main/res/layout/activity_teacher_list.xml
@@ -100,6 +100,7 @@
         android:layout_marginBottom="35dp"
         android:layout_marginTop="43dp"
         android:text="@string/txtRemoveTeacher"
+        android:onClick="removeCheckedTeachers"
         app:layout_constraintBottom_toTopOf="@+id/lstTeachersView"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
